[package]
name = "julezz"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
clap_complete = "4.0"
colored = "2.0"
dirs = "5.0"
carapace_spec_clap = "0.1.0"
serde_yaml = "0.9"
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
dotenv = "0.15"
